--- a/Czech/main/CloudBackup.apk/res/values-cs/plurals.xml
+++ b/Czech/main/CloudBackup.apk/res/values-cs/plurals.xml
@@ -10,6 +10,18 @@
      </plurals>
      <plurals name="cloud_backup_detail_manage_summary">
          <item quantity="other">%1$s záloh, velikost: %2$s</item>
-         <item quantity="one">%1$s záloha, velikost: %2$s</item>
+         <item quantity="one">%1$s záloha, velikost: %2$s</item>	
      </plurals>	
+	    <plurals name="restore_app_order_prior">
+        <item quantity="other">Vysoká priorita: %d položen</item>
+        <item quantity="one">Vysoká priorita: %d položka</item>
+    </plurals>
+    <plurals name="restore_app_order_normal">
+        <item quantity="other">Normální priorita: %d položen</item>
+        <item quantity="one">Normální priorita: %d položka</item>
+    </plurals>
+    <plurals name="restore_app_order_installed">
+        <item quantity="other">%d apl. v tomto zařízení</item>
+        <item quantity="one">%d apl. v tomto zařízení</item>
+    </plurals>	
 </resources>
