--- a/Czech/main/PowerKeeper.apk/res/values-cs/arrays.xml
+++ b/Czech/main/PowerKeeper.apk/res/values-cs/arrays.xml
@@ -109,4 +109,8 @@
         <item>Vlastní</item>
         <item>Úspora baterie</item>
     </string-array>	
+    <string-array name="pc_manage_active_app_items">
+        <item>Uspat aplikace</item>
+        <item>Ušetřit energii</item>
+    </string-array>
 </resources>
