--- a/Czech/main/Weather.apk/res/values-cs/plurals.xml
+++ b/Czech/main/Weather.apk/res/values-cs/plurals.xml
@@ -21,4 +21,8 @@
         <item quantity="other">Předpověď na %1$s dní</item>
         <item quantity="one">Předpověď na %1$s den</item>
     </plurals>
+     <plurals name="feedback_result_interval_time_too_short">
+        <item quantity="other">%1$s seconds after the feedback</item>
+        <item quantity="one">%1$s second after the feedback</item>
+     </plurals>
 </resources>
