--- a/Czech/main/CleanMaster.apk/res/values-cs/plurals.xml
+++ b/Czech/main/CleanMaster.apk/res/values-cs/plurals.xml
@@ -111,4 +111,8 @@
         <item quantity="other">%1$d%% položek/s zbývá: %2$s</item>
         <item quantity="one">%1$d%% položek/s zbývá: %2$s</item>
     </plurals>	 
+     <plurals name="whatsapp_delete_files">
+        <item quantity="other">Vymazat soubory (%1$d)?</item>
+        <item quantity="one">Vymazat soubory (%1$d)?</item>
+     </plurals>
 </resources>
